// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should change style when hover header 1`] = `
"<div class=\\"tabs \\"><header><div class=\\"tab active \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label1</div><div class=\\"bottom\\"></div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 500;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #1e3de4;
            background-color: ;
          }
          .label:hover {
            color: #1e3de4;
            background-color: ;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 1;
            transform: scale(1);
            height: 4px;
            width: 100%;
          }
        </style></div></div><div class=\\"tab  \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label2</div><div class=\\"bottom\\"></div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 400;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #444;
            background-color: ;
          }
          .label:hover {
            color: #1e3de4;
            background-color: ;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 0;
            transform: scale(0.75);
            height: 4px;
            width: 100%;
          }
        </style></div></div></header><div class=\\"content\\">1</div><style>
            header {
              display: flex;
              flex-wrap: nowrap;
              overflow-x: auto;
              align-items: center;
              border-bottom: ;
            }
            ::-webkit-scrollbar {
              display: none;
            }
            .content {
              padding-top: 0.625rem;
            }

            .tab {
              cursor: pointer;
              outline: 0;
              text-transform: capitalize;
              font-size: 1rem;
              margin: 0 1px;
              user-select: none;
              display: flex;
              align-items: center;
              line-height: 1.25rem;
              position: relative;
              font-variant-numeric: tabular-nums;
            }
            .tab:first-of-type {
              margin-left: 0;
            }
          </style></div>"
`;

exports[`Tabs should change style when hover header 2`] = `
"<div class=\\"tabs \\"><header><div class=\\"tab active \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label1</div><div class=\\"bottom\\"></div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 500;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #1e3de4;
            background-color: ;
          }
          .label:hover {
            color: #1e3de4;
            background-color: ;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 1;
            transform: scale(1);
            height: 4px;
            width: 100%;
          }
        </style></div></div><div class=\\"tab  \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label2</div><div class=\\"bottom\\"></div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 400;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #444;
            background-color: ;
          }
          .label:hover {
            color: #1e3de4;
            background-color: ;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 0;
            transform: scale(0.75);
            height: 4px;
            width: 100%;
          }
        </style></div></div></header><div class=\\"content\\">1</div><style>
            header {
              display: flex;
              flex-wrap: nowrap;
              overflow-x: auto;
              align-items: center;
              border-bottom: ;
            }
            ::-webkit-scrollbar {
              display: none;
            }
            .content {
              padding-top: 0.625rem;
            }

            .tab {
              cursor: pointer;
              outline: 0;
              text-transform: capitalize;
              font-size: 1rem;
              margin: 0 1px;
              user-select: none;
              display: flex;
              align-items: center;
              line-height: 1.25rem;
              position: relative;
              font-variant-numeric: tabular-nums;
            }
            .tab:first-of-type {
              margin-left: 0;
            }
          </style></div>"
`;

exports[`Tabs should render correctly 1`] = `
"<div><div class=\\"tabs \\"><header><div class=\\"tab  \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label1</div><div class=\\"bottom\\"></div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 400;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #444;
            background-color: ;
          }
          .label:hover {
            color: #1e3de4;
            background-color: ;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 0;
            transform: scale(0.75);
            height: 4px;
            width: 100%;
          }
        </style></div></div><div class=\\"tab  \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label2</div><div class=\\"bottom\\"></div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 400;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #444;
            background-color: ;
          }
          .label:hover {
            color: #1e3de4;
            background-color: ;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 0;
            transform: scale(0.75);
            height: 4px;
            width: 100%;
          }
        </style></div></div></header><div class=\\"content\\"></div><style>
            header {
              display: flex;
              flex-wrap: nowrap;
              overflow-x: auto;
              align-items: center;
              border-bottom: ;
            }
            ::-webkit-scrollbar {
              display: none;
            }
            .content {
              padding-top: 0.625rem;
            }

            .tab {
              cursor: pointer;
              outline: 0;
              text-transform: capitalize;
              font-size: 1rem;
              margin: 0 1px;
              user-select: none;
              display: flex;
              align-items: center;
              line-height: 1.25rem;
              position: relative;
              font-variant-numeric: tabular-nums;
            }
            .tab:first-of-type {
              margin-left: 0;
            }
          </style></div><div class=\\"tabs \\"><header><div class=\\"tab  \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label1</div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 400;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #444;
            background-color: #f1f3f6;
          }
          .label:hover {
            color: #1e3de4;
            background-color: #f1f3f6;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 0;
            transform: scale(0.75);
            height: 4px;
            width: 100%;
          }
        </style></div></div><div class=\\"tab  \\" role=\\"button\\"><div class=\\"nav\\"><div class=\\"label\\">label2</div><style>
          .nav {
            display: flex;
            flex-direction: column;
            position: relative;
          }
          .label {
            cursor: ;
            font-weight: 400;
            white-space: nowrap;
            line-height: 22px;
            padding: 0.5714rem 1.1429rem;
            border-radius: 4px 4px 0px 0px;
            text-align: center;
            color: #444;
            background-color: #f1f3f6;
          }
          .label:hover {
            color: #1e3de4;
            background-color: #f1f3f6;
          }
          .bottom {
            background-color: #1e3de4;
            transition: all 200ms ease;
            opacity: 0;
            transform: scale(0.75);
            height: 4px;
            width: 100%;
          }
        </style></div></div></header><div class=\\"content\\"></div><style>
            header {
              display: flex;
              flex-wrap: nowrap;
              overflow-x: auto;
              align-items: center;
              border-bottom: ;
            }
            ::-webkit-scrollbar {
              display: none;
            }
            .content {
              padding-top: 0.625rem;
            }

            .tab {
              cursor: pointer;
              outline: 0;
              text-transform: capitalize;
              font-size: 1rem;
              margin: 0 1px;
              user-select: none;
              display: flex;
              align-items: center;
              line-height: 1.25rem;
              position: relative;
              font-variant-numeric: tabular-nums;
            }
            .tab:first-of-type {
              margin-left: 0;
            }
          </style></div></div>"
`;
